--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <marquee behavior="alternate"  scrollamount="12"><h1 style="font-size: 50px !important">welcome to 🅱️ena🅱️🅱️s</h1></marquee>
+  <marquee behavior="alternate"  scrollamount="12"><h1 style="font-size: 50px !important">🍜welcome to the eat ramen and cry hackathon🍜</h1></marquee>
 
   <div style="width:100%;height:200px;border:6px outset orange;background-color:pink">
     <div class="bouncyHouse">
