--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div class="bounceDiv">
      <p id="bounceTxt">⬇     wowee    ⬇</p>
-     <a class="linkColors" style="text-align:center;display:block;font-size:45px" href="http://www.test.com">register here!!!</a>
+     <a class="linkColors" style="text-align:center;display:block;font-size:45px" href="https://goo.gl/forms/W5Bg9n02Ghwx7WL03">register here!!!</a>
 </div>
 
 
