--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:fb="http://ogp.me/ns/fb#">
 <head>
+<meta property="og:image" content="https://s-i.huffpost.com/gen/2682776/images/o-RESPECT-facebook.jpg" />	
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src='scripts/script.js' type='text/javascript'></script>
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -21,3 +24,4 @@
 
 
 </body>
+</html>
